--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
+    "react-uuid": "^2.0.0",
+    "smooth-scrollbar": "^8.8.3",
     "styled-components": "^5.3.9",
+    "swiper": "^9.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
